# anki-ielts

./: .env  .gitignore  AGENTS.md  Makefile  README.md  anki-ielts.json  pyproject.toml
cards/: ielts-maxxing.json
configs/: README.md  shared_decks.json
data/: instruction_detailed_feedback.json
data/bronze/: introduction_1.toml  overview_1.toml
docs/: DECISIONS.md  WORKFLOWS.md
editable/2090856176-IELTS-Writing-Part-1/: manifest.yaml
editable/2090856176-IELTS-Writing-Part-1/_base/: cards.json  collection.anki2  collection.json  notes.json  summary.json
editable/2090856176-IELTS-Writing-Part-1/notes/: 1466416397068.yaml  1466416662457.yaml  1466416686354.yaml  1466416734961.yaml  1466416752221.yaml  1466416780025.yaml  1466416812508.yaml  1466416876963.yaml  1466416928380.yaml  1466416979602.yaml  1466417166397.yaml  1466417225445.yaml  1466417271378.yaml  1466417306792.yaml  1466417358001.yaml  1466417396054.yaml  1466417425652.yaml  1466417460543.yaml  1466417513157.yaml  1466417543471.yaml  1466417575765.yaml  1466417609678.yaml  1466417658619.yaml  (+10 more)
raw/: day_2.html  day_2.json
scripts/: 1_html_to_json.py  1_toml_to_crowdanki_json.py  2_json_to_crowdanki_json.py  anki_helpers.py  build_authored_deck.py  build_release.py  decompile_apkg.py  extract_candidates.py  fetch_apkgs.py  init_authored_deck.py  simplify_decompiled.py
src/: anki.py  crowdanki.py  datatypes.py  datatypes_instruction.py  general.py  genner.py  html.py  type.py
src/sub/: detailed_feedback.py
tests/: test_datatype.py  test_general.py  test_genner.py  test_sub_detailed_feedback.py
(+49 files in other folders)
